--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+*/node_modules
 /.pnp
 .pnp.js
 .yarn/install-state.gz
 
 # testing
-/coverage
+*/coverage
 
 # next.js
-/.next/
-/out/
+*/.next/
+*/out/
 
 # production
-/build
+*/build
 
 # misc
 .DS_Store
@@ -26,11 +26,126 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+*/.env*.local
 
 # vercel
-.vercel
+*/.vercel
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+*/next-env.d.ts
+
+############################
+# OS X
+############################
+
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+.Spotlight-V100
+.Trashes
+._*
+
+
+############################
+# Linux
+############################
+
+*~
+
+
+############################
+# Windows
+############################
+
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
+
+
+############################
+# Packages
+############################
+
+*.7z
+*.csv
+*.dat
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.seed
+*.so
+*.swo
+*.swp
+*.swn
+*.swm
+*.out
+*.pid
+
+
+############################
+# Logs and databases
+############################
+
+*/.tmp
+*.log
+*.sql
+*.sqlite
+*.sqlite3
+
+
+############################
+# Misc.
+############################
+
+*#
+*/ssl
+*/.idea
+*/nbproject
+*/public/uploads/*
+*/!public/uploads/.gitkeep
+
+############################
+# Node.js
+############################
+
+*/lib-cov
+*/lcov.info
+*/pids
+*/logs
+*/results
+*/node_modules
+*/.node_history
+
+############################
+# Tests
+############################
+
+coverage
+
+############################
+# Strapi
+############################
+
+*/.env
+*/license.txt
+*/exports
+*/*.cache
+*/dist
+*/build
+*/.strapi-updater.json
